# Tetris

./: .gitignore  CMakeLists.txt  Figures.odg  README.md  commit.sh  doc_gen.py
src/: controller.cpp  controller.hpp  figure.cpp  figure.hpp  figure1.cpp  figure1.hpp  figure2.cpp  figure2.hpp  figure4.cpp  figure4.hpp  figure_lhook.cpp  figure_lhook.hpp  figure_rhook.cpp  figure_rhook.hpp  figure_square.cpp  figure_square.hpp  game.cpp  game.hpp  main.cpp  model.cpp  model.hpp  pile.cpp  pile.hpp  point.cpp  point.hpp  renderer.cpp  renderer.hpp  view.cpp  view.hpp  view_qt.cpp  view_qt.hpp  view_sdl.cpp  view_sdl.hpp
